@@ -1,3 +1,4 @@
+\.rsync
 DESCRIPTION_
 misc/
 Done
