@@ -62,7 +62,7 @@
   E.Cantoni (2004)
   Analysis of Robust Quasi-deviances for Generalized Linear Models.
   \emph{Journal of Statistical Software} \bold{10},
-  \url{http://www.jstatsoft.org/v10/i04}
+  \url{https://www.jstatsoft.org/article/view/v010i04}
 }
 
 \author{ Andreas Ruckstuhl }
