@@ -193,8 +193,7 @@ glmrob(formula, family, data, weights, subset, na.action,
   Eva Cantoni (2004)
   Analysis of Robust Quasi-deviances for Generalized Linear Models.
   \emph{Journal of Statistical Software}, \bold{10},
-  \url{http://www.jstatsoft.org/v10/i04}
-
+  \url{https://www.jstatsoft.org/article/view/v010i04}
   Eva Cantoni and Elvezio Ronchetti (2006)
   A robust approach for skewed and heavy-tailed outcomes in the analysis
   of health care expenditures.
