@@ -67,7 +67,7 @@
   Eva Cantoni (2004)
   Analysis of Robust Quasi-deviances for Generalized Linear Models.
   \emph{Journal of Statistical Software} \bold{10}, 04,
-  \url{http://www.jstatsoft.org/v10/i04}
+  \url{https://www.jstatsoft.org/article/view/v010i04}
 }
 \references{
   Lindenmayer, D. B., Cunningham, R. B., Tanton, M. T., Nix, H. A. and
