@@ -23,7 +23,7 @@
 % }
 \source{
   The website accompanying the MMY-book:
-  \url{http://www.wiley.com/legacy/wileychi/robust_statistics}
+  \url{https://www.wiley.com/legacy/wileychi/robust_statistics/}
 }
 % \references{
 %   ~~ possibly secondary sources and usages ~~
